<resources>
    <string name="app_name">EasyCloset</string>
    <string name="titulo_cadastrar_roupas">Register Clothes</string>
    <string name="titulo_listar_roupas">List Clothes</string>
    <string name="titulo_informacoes">Information</string>

    <string name="campoNomeCadastroUsuario">First Name</string>
    <string name="campoSobrenomeCadastroUsuario">Last Name</string>
    <string name="campoCpfCadastroUsuario">CPF</string>
    <string name="campoFoneCadastroUsuario">Phone</string>
    <string name="campoEmailCadastroUsuario">E-mail</string>
    <string name="nomeObrigatorioCadastroUsuario">First Name - mandatory field!</string>
    <string name="sobrenomeObrigatorioCadastroUsuario">" Last Name - mandatory field!"</string>
    <string name="autorizoPublicidade">" I authorize advertising in my email."</string>
    <string name="formulario_incompleto">Incomplete Form</string>
    <string name="formulario_limpo">Clean Form</string>

    <string name="app_descricao">EasyCloset - Apparel management application.</string>
    <string name="descricao_logomarca_utfpr">"Logo of the Federal Technological University of Paraná "</string>
    <string name="descricao_foto_autor_app">"App developer photo. "</string>
    <string name="autor">Author App</string>
    <string name="autor_junior_martins">Junior Martins</string>
    <string name="autor_formacao_academica">- Attending Lato Sensu Post-Graduation (specialization) in Java Technology (UTFPR);          - Graduated in Master in Business Administration (MBA) in Database Administration (Fameesp);          - Graduated in Lato Sensu Postgraduate (specialization) in Database Administration (Unopar);          - Graduated in a bachelor\'s degree in Social Communication with an emphasis on Journalism (Unic-MT);          - Graduated in a higher technical course in Photography (Unic-MT);          - Graduated in a technical course in Data Processing (Urcamp-RS).</string>
    <string name="autor_celular">"(65) 99611 8288"</string>
    <string name="autor_email">juniorsoaresmartins@gmail.com</string>
    <string name="pos_java">Lato Sensu Postgraduate (Specialization) in Java Technology</string>

    <string name="roupas">Clothes</string>
    <string name="roupa">Clothing</string>
    <string name="usuarios">Users</string>
    <string name="usuario">User</string>

    <string name="home">HOME</string>
    <string name="cadastrar">Register</string>
    <string name="salvar">Save</string>
    <string name="listar">List</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="limpar">Clean</string>
    <string name="voltar">Back</string>
    <string name="acoes">Actions</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>

    <string name="preferencias">Preferences</string>
    <string name="tema_padrao">Default Theme</string>
    <string name="tema_dark">Dark Theme</string>
    <string name="tema_latino">Latin Theme</string>

    <string name="na_posicao">in position</string>
    <string name="excluido">Excluded!</string>
    <string name="salvo">Saved</string>
    <string name="atualizado">Updated</string>
    <string name="erro_retorno_incompativel">ERROR - Incompatible Return!</string>

    <string name="instrucoes_entrega4">"EasyCloset \n
        - Application created with the intention of managing the clothes closet."</string>


    <string name="sexo_masculino">Masculine</string>
    <string name="sexo_feminino">Feminine</string>

    <string name="tipo_de_roupa">Type of Clothing:</string>
    <string name="tecido">Tissue:</string>
    <string name="cor_principal">Main Color:</string>
    <string name="tamanho">Size:</string>
    <string name="descricao">Description:</string>
    <string name="valor_pago">Amount paid:</string>
    <string name="forma_pagamento">Form of payment:</string>

    <string name="selecionar">Select</string>
    <string name="doutorado">Doctorate degree</string>
    <string name="mestrado">Master´s degree</string>
    <string name="especializações_e_mbas">Specializations and MBAs</string>
    <string name="superior">Higher</string>
    <string name="tecnico">Technician</string>
    <string name="ensino_medio">High School</string>
    <string name="ensino_fundamental">Elementary School</string>
    <string name="ensino_fundamental_incompleto">Incomplete Elementary School</string>

    <string name="chapeu">Hat</string>
    <string name="bone">Cap</string>
    <string name="camisa">Shirt</string>
    <string name="camiseta">T-shirt</string>
    <string name="calca">Pants</string>
    <string name="bermuda">Shorts</string>
    <string name="cueca">Underwear</string>
    <string name="meia">Half</string>
    <string name="sapato">Shoe</string>
    <string name="tenis">Sneakers</string>

    <string name="tricoline">Tricoline</string>
    <string name="malha">Mesh</string>
    <string name="cetim">Satin</string>
    <string name="canvas">Canvas</string>
    <string name="cordoba">Cordoba</string>
    <string name="microfibra">Microfiber</string>
    <string name="algodao">Cotton</string>
    <string name="la">Wool</string>
    <string name="seda">Silk</string>
    <string name="linho">Linen</string>

    <string name="azul">Blue</string>
    <string name="verde">Green</string>
    <string name="branco">White</string>
    <string name="preto">Black</string>
    <string name="amarelo">Yellow</string>
    <string name="marrom">Brown</string>
    <string name="laranja">Orange</string>
    <string name="roxo">Purple</string>
    <string name="rosa">Pink</string>
    <string name="vermelho">Red</string>

    <string name="pp">PP</string>
    <string name="p">P</string>
    <string name="m">M</string>
    <string name="g">G</string>
    <string name="gg">GG</string>
    <string name="xg">XG</string>
    <string name="xgg">XGG</string>

    <string name="a_vista">in cash</string>
    <string name="a_prazo">on term</string>

    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="confirmar_exclusao">Confirm deletion?</string>

</resources>

