<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_sobre_app"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/sobre"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_submenu1_main"
        android:title="@string/preferencias" >
        <menu >
            <group
                android:id="@+id/menu_group1_submenu1_main"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_preferencias_tema_padrao"
                    android:title="@string/tema_padrao" />
                <item
                    android:id="@+id/menu_preferencias_tema_escuro"
                    android:title="@string/tema_dark" />
                <item
                    android:id="@+id/menu_preferencias_tema_latino"
                    android:title="@string/tema_latino" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/item_main_submenu2_main"
        android:title="@string/usuarios">
        <menu>
            <item
                android:id="@+id/item_main_cadastrar_usuarios"
                android:title="@string/cadastrar" />
            <item
                android:id="@+id/item_main_listar_usuarios"
                android:title="@string/listar" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_item_submenu3_main"
        android:title="@string/roupas" >
        <menu >
            <item
                android:id="@+id/menu_item_cadastrar_roupas"
                android:title="@string/cadastrar" />
            <item
                android:id="@+id/menu_item_listar_roupas"
                android:title="@string/listar" />
        </menu>
    </item>
</menu>