<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_tela_principal"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_adicionar_roupas"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/adicionar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_sobre_app"
        android:title="@string/sobre" />
    <item
        android:id="@+id/menu_item_submenu2"
        android:title="@string/roupas" >
        <menu >
            <item
                android:id="@+id/menu_item_cadastrar_roupas"
                android:title="@string/cadastrar" />
            <item
                android:id="@+id/menu_item_listar_roupas"
                android:title="@string/listar" />
        </menu>
    </item>
</menu>